CSS/index.css
@font-face {
  font-family: 'PT Sans';
  font-style: italic;
  font-weight: 400;
  src: local('PT Sans Italic'), local('PTSans-Italic'), url(https://fonts.gstatic.com/s/ptsans/v10/jizYRExUiTo99u79D0e0x8mN.ttf) format('truetype');
}
@font-face {
  font-family: 'PT Sans';
  font-style: italic;
  font-weight: 700;
  src: local('PT Sans Bold Italic'), local('PTSans-BoldItalic'), url(https://fonts.gstatic.com/s/ptsans/v10/jizdRExUiTo99u79D0e8fOydLxUY.ttf) format('truetype');
}
@font-face {
  font-family: 'PT Sans';
  font-style: normal;
  font-weight: 400;
  src: local('PT Sans'), local('PTSans-Regular'), url(https://fonts.gstatic.com/s/ptsans/v10/jizaRExUiTo99u79D0KEwA.ttf) format('truetype');
}
@font-face {
  font-family: 'PT Sans';
  font-style: normal;
  font-weight: 700;
  src: local('PT Sans Bold'), local('PTSans-Bold'), url(https://fonts.gstatic.com/s/ptsans/v10/jizfRExUiTo99u79B_mh0O6tKA.ttf) format('truetype');
}
* {
  box-sizing: border-box;
}
html,
body {
  margin: 0;
  padding: 0;
}
/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
/* Document
   ========================================================================== */
* {
  list-style: none;
}
/**
 * 1. Correct the line height in all browsers.
 * 2. Prevent adjustments of font size after orientation changes in iOS.
 */
h1,
h2,
h3,
h4,
p {
  padding: 0;
  margin: 0;
}
html {
  line-height: 1.15;
  /* 1 */
  -webkit-text-size-adjust: 100%;
  /* 2 */
}
/* Sections
   ========================================================================== */
/**
 * Remove the margin in all browsers.
 */
body {
  margin: 0;
}
/**
 * Render the `main` element consistently in IE.
 */
main {
  display: block;
}
/**
 * Correct the font size and margin on `h1` elements within `section` and
 * `article` contexts in Chrome, Firefox, and Safari.
 */
h1 {
  font-size: 2em;
  margin: 0.67em 0;
}
/* Grouping content
   ========================================================================== */
/**
 * 1. Add the correct box sizing in Firefox.
 * 2. Show the overflow in Edge and IE.
 */
hr {
  box-sizing: content-box;
  /* 1 */
  height: 0;
  /* 1 */
  overflow: visible;
  /* 2 */
}
/**
 * 1. Correct the inheritance and scaling of font size in all browsers.
 * 2. Correct the odd `em` font sizing in all browsers.
 */
pre {
  font-family: monospace, monospace;
  /* 1 */
  font-size: 1em;
  /* 2 */
}
/* Text-level semantics
   ========================================================================== */
/**
 * Remove the gray background on active links in IE 10.
 */
a {
  background-color: transparent;
}
/**
 * 1. Remove the bottom border in Chrome 57-
 * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
 */
abbr[title] {
  border-bottom: none;
  /* 1 */
  text-decoration: underline;
  /* 2 */
  text-decoration: underline dotted;
  /* 2 */
}
/**
 * Add the correct font weight in Chrome, Edge, and Safari.
 */
b,
strong {
  font-weight: bolder;
}
/**
 * 1. Correct the inheritance and scaling of font size in all browsers.
 * 2. Correct the odd `em` font sizing in all browsers.
 */
code,
kbd,
samp {
  font-family: monospace, monospace;
  /* 1 */
  font-size: 1em;
  /* 2 */
}
/**
 * Add the correct font size in all browsers.
 */
small {
  font-size: 80%;
}
/**
 * Prevent `sub` and `sup` elements from affecting the line height in
 * all browsers.
 */
sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
sub {
  bottom: -0.25em;
}
sup {
  top: -0.5em;
}
/* Embedded content
   ========================================================================== */
/**
 * Remove the border on images inside links in IE 10.
 */
img {
  border-style: none;
}
/* Forms
   ========================================================================== */
/**
 * 1. Change the font styles in all browsers.
 * 2. Remove the margin in Firefox and Safari.
 */
button,
input,
optgroup,
select,
textarea {
  font-family: inherit;
  /* 1 */
  font-size: 100%;
  /* 1 */
  line-height: 1.15;
  /* 1 */
  margin: 0;
  /* 2 */
}
/**
 * Show the overflow in IE.
 * 1. Show the overflow in Edge.
 */
button,
input {
  /* 1 */
  overflow: visible;
}
/**
 * Remove the inheritance of text transform in Edge, Firefox, and IE.
 * 1. Remove the inheritance of text transform in Firefox.
 */
button,
select {
  /* 1 */
  text-transform: none;
}
/**
 * Correct the inability to style clickable types in iOS and Safari.
 */
button,
[type="button"],
[type="reset"],
[type="submit"] {
  -webkit-appearance: button;
}
/**
 * Remove the inner border and padding in Firefox.
 */
button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}
/**
 * Restore the focus styles unset by the previous rule.
 */
button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}
/**
 * Correct the padding in Firefox.
 */
fieldset {
  padding: 0.35em 0.75em 0.625em;
}
/**
 * 1. Correct the text wrapping in Edge and IE.
 * 2. Correct the color inheritance from `fieldset` elements in IE.
 * 3. Remove the padding so developers are not caught out when they zero out
 *    `fieldset` elements in all browsers.
 */
legend {
  box-sizing: border-box;
  /* 1 */
  color: inherit;
  /* 2 */
  display: table;
  /* 1 */
  max-width: 100%;
  /* 1 */
  padding: 0;
  /* 3 */
  white-space: normal;
  /* 1 */
}
/**
 * Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */
progress {
  vertical-align: baseline;
}
/**
 * Remove the default vertical scrollbar in IE 10+.
 */
textarea {
  overflow: auto;
}
/**
 * 1. Add the correct box sizing in IE 10.
 * 2. Remove the padding in IE 10.
 */
[type="checkbox"],
[type="radio"] {
  box-sizing: border-box;
  /* 1 */
  padding: 0;
  /* 2 */
}
/**
 * Correct the cursor style of increment and decrement buttons in Chrome.
 */
[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}
/**
 * 1. Correct the odd appearance in Chrome and Safari.
 * 2. Correct the outline style in Safari.
 */
[type="search"] {
  -webkit-appearance: textfield;
  /* 1 */
  outline-offset: -2px;
  /* 2 */
}
/**
 * Remove the inner padding in Chrome and Safari on macOS.
 */
[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}
/**
 * 1. Correct the inability to style clickable types in iOS and Safari.
 * 2. Change font properties to `inherit` in Safari.
 */
::-webkit-file-upload-button {
  -webkit-appearance: button;
  /* 1 */
  font: inherit;
  /* 2 */
}
/* Interactive
   ========================================================================== */
/*
 * Add the correct display in Edge, IE 10+, and Firefox.
 */
details {
  display: block;
}
/*
 * Add the correct display in all browsers.
 */
summary {
  display: list-item;
}
/* Misc
   ========================================================================== */
/**
 * Add the correct display in IE 10+.
 */
template {
  display: none;
}
/**
 * Add the correct display in IE 10.
 */
[hidden] {
  display: none;
}
* {
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}
body {
  background-color: #c03268;
}
.page-wrapper {
  margin-right: auto;
  margin-left: auto;
  min-width: 375px;
  width: 375px;
  background-color: #ffffff;
}
.banner {
  background-image: url(../assets/img/Hero-banner-image.jpg);
  height: 377px;
  background-size: 375px 377px;
}
.black_line {
  margin: 40px 20px;
  border-bottom: 2px solid #b9b9b9;
}
button {
  background-color: #ff8533;
  border: none;
  color: white;
  padding: 10px 20px;
  font-size: 1.2rem;
  font-weight: bold;
  display: inline-block;
  border-radius: 10px;
}
.h2-quickfix_ {
  margin-left: 25px;
  color: #464646;
}
.nav {
  height: 56px;
  background-image: linear-gradient(rgba(24, 61, 112, 0.781), rgba(255, 255, 255, 0));
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}
.nav a {
  text-shadow: 2px 2px 4px #000000;
}
.nav .font-logo {
  width: 10%;
  margin-left: 20px;
  margin-right: 20px;
  color: white;
  text-decoration: none;
  font-size: 1.9rem;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}
.nav ul {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  margin-left: 20px;
  margin-right: 20px;
  width: 80%;
}
.nav ul a {
  color: white;
  text-decoration: none;
}
.header-content {
  color: white;
  margin-top: 95px;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: flex-end;
}
.header-content .h-top {
  width: 50%;
  margin-top: -20px;
  margin-bottom: 20px;
}
.header-content .h-top h1 {
  font-size: 2rem;
  text-shadow: 2px 2px 4px #00000060;
}
.below-header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin: 25px 18px;
  color: #6c6c6c;
}
.below-header h2 {
  font-size: 1.3rem;
  padding-top: 20px;
  padding-bottom: 20px;
}
.below-header p {
  font-size: 1.3rem;
  padding-bottom: 20px;
  padding-top: 10px;
}
.card_top {
  color: white;
}
.card_top h2 {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  height: 56px;
  background-image: linear-gradient(rgba(6, 58, 101, 0.698), rgba(6, 58, 101, 0.144));
  padding-left: 15px;
}
.card_top .img_1 {
  background-image: url(../assets/img/Read-Reviews-Image.png);
  background-repeat: no-repeat;
  background-size: cover;
  height: 250px;
}
.card_top .img_2 {
  background-image: url(../assets/img/Write-Reviews-Image.png);
  background-repeat: no-repeat;
  background-size: cover;
  height: 250px;
}
.card_top .img_3 {
  background-image: url(../assets/img/Connect-Image.png);
  background-repeat: no-repeat;
  background-size: cover;
  height: 250px;
}
.card_top .blue {
  background-color: #0a63ad;
  height: 143px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 25px;
  text-align: center;
  font-size: 1.2rem;
}
.large-card {
  margin: 50px 25px;
  padding: 0 15px;
  border-left: 3px solid #ff8533;
}
.section-3 .parent {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}
.section-3 .parent div h3 {
  font-size: 1.5rem;
  padding: 10px;
}
.section-3 .parent div h2 {
  font-size: 1rem;
  color: #464646;
  padding: 0 0 10px 10px;
  border-bottom: 1px solid #6c6c6c;
}
.section-3 p {
  color: #063A65;
  padding: 50px 0;
}
#quick-fix {
  padding-bottom: 0;
}
.call-2-action {
  background: #07487d;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 20px;
  height: 207px;
}
.call-2-action p {
  padding-bottom: 30px;
  font-size: 1.3rem;
  text-align: center;
}
.social-card {
  width: 100%;
  padding: 35px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: baseline;
}
.social-card .social-icons img {
  width: 45px;
}
.copyright {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 25px;
  padding-right: 10px;
  padding-left: 10px;
}
.copyright p {
  font-size: 0.9rem;
}

